Refactor DevCheck tests, annotations, JavaScript, and pom.xml for consistency
- Add new test classes for DevCheck auto-configuration
- Remove old test classes from core package
- Update DevCheckController annotation to remove JSON media type
- Refactor pathPrefix to PATH_PREFIX in controllers
- Update logback controller to use new path and service name
- Add InheritedDevCheckController annotation for testing purposes
- Replace for loop with for...of loop in devCheckUtilInfo.html
- Update variable names in JavaScript for clarity
- Remove unused properties section from pom.xml
- Ensure consistent code style in JavaScript