@@ -1,7 +1,6 @@
 package io.github.luversof.boot.devcheck.logging.logback.controller;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.web.bind.annotation.GetMapping;
 
@@ -16,13 +15,13 @@ import lombok.AllArgsConstructor;
 @DevCheckController
 public class DevCheckLogbackController {
 	
-	private final String pathPrefix = "/blueskyDevCheck/logging/logback";
+	private static final String PATH_PREFIX = "/devCheck/logging/logback";
 
-	private final LogbackAppenderService<ILoggingEvent> blueskyLogbackAppenderService;
+	private final LogbackAppenderService<ILoggingEvent> playncLogbackAppenderService;
 
 	@DevCheckDescription("Check last 500 line log")
-	@GetMapping(pathPrefix + "/logView")
+	@GetMapping(PATH_PREFIX + "/logView")
 	public List<String> logView() {
-		return blueskyLogbackAppenderService.getLogQueue().stream().map(queue -> queue.getLogMessage().replaceAll(CoreConstants.LINE_SEPARATOR, "").replace("\t", "")).collect(Collectors.toList());
+		return playncLogbackAppenderService.getLogQueue().stream().map(queue -> queue.getLogMessage().replaceAll(CoreConstants.LINE_SEPARATOR, "").replace("\t", "")).toList();
 	}
 }
